segunda entrega coderhouse

--- a/index.html
+++ b/index.html
@@ -10,33 +10,16 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <style>
-      body {
-        height: 100vh;
-        background-color: #fffbe9;
-      }
-
-      main {
-        margin-top: 50px;
-      }
-
-      input {
-        width: 50px;
-      }
-      input[type="number"]::-webkit-inner-spin-button {
-        opacity: 1;
-      }
-    </style>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <main class="container-fluid d-flex flex-column">
-      <h1 class="text-center">Producto prueba de proyecto integrador!</h1>
-      <section class="body-cards m-auto p-auto">
+      <h1 class="text-center">Gracias por entrar a nuestra tienda!</h1>
+      <section id="shop" class="body-cards m-auto p-auto">
         <div class="card mt-5" style="width: 18rem">
           <img src="./image/product-1.png" class="card-img-top" alt="..." />
           <div class="card-body">
             <h5 class="card-title">Pan Especial</h5>
-            <p class="card-text">Pan relleno de jamon y queso.</p>
 
             <div class="d-flex justify-content-between align-items-center">
               <button type="button" class="btn btn-success" btn btn-sm>
